# FastTasks

./: CMakeLists.txt  README.md  vcpkg.json
source/: CMakeLists.txt  main.cpp
source/AdventOfCode/: CMakeLists.txt
source/AdventOfCode/BridgeRepair/inc/: BridgeRepair.hpp
source/AdventOfCode/BridgeRepair/src/: BridgeRepair.cpp
source/AdventOfCode/CeresSearch/inc/: CeresSearch.hpp
source/AdventOfCode/CeresSearch/src/: CeresSearch.cpp
source/AdventOfCode/ClawContraption/inc/: ClawContraption.hpp
source/AdventOfCode/ClawContraption/src/: ClawContraption.cpp
source/AdventOfCode/DiskFragmenter/inc/: DiskFragmenter.hpp
source/AdventOfCode/DiskFragmenter/src/: DiskFragmenter.cpp
source/AdventOfCode/GardenGroups/inc/: GardenGroups.hpp
source/AdventOfCode/GardenGroups/src/: GardenGroups.cpp
source/AdventOfCode/GuardGallivant/inc/: GuardGallivant.hpp
source/AdventOfCode/GuardGallivant/src/: GuardGallivant.cpp
source/AdventOfCode/HistorianHysteria/inc/: HistorianHysteria.hpp
source/AdventOfCode/HistorianHysteria/src/: HistorianHysteria.cpp
source/AdventOfCode/HoofIt/inc/: HoofIt.hpp
source/AdventOfCode/HoofIt/src/: HoofIt.cpp
source/AdventOfCode/MullItOver/inc/: MullItOver.hpp
source/AdventOfCode/MullItOver/src/: MullItOver.cpp
source/AdventOfCode/PlutonianPebbles/inc/: PlutonianPebbles.hpp
source/AdventOfCode/PlutonianPebbles/src/: PlutonianPebbles.cpp
source/AdventOfCode/PrintQueue/inc/: PrintQueue.hpp
source/AdventOfCode/PrintQueue/src/: PrintQueue.cpp
source/AdventOfCode/RedNosedReports/inc/: RedNosedReports.hpp
source/AdventOfCode/RedNosedReports/src/: RedNosedReports.cpp
source/AdventOfCode/ReindeerMaze/inc/: ReindeerMaze.hpp
source/AdventOfCode/ReindeerMaze/src/: ReindeerMaze.cpp
source/AdventOfCode/ResonantCollinearity/inc/: ResonantCollinearity.hpp
source/AdventOfCode/ResonantCollinearity/src/: ResonantCollinearity.cpp
source/AdventOfCode/RestroomRedoubt/inc/: RestroomRedoubt.hpp
source/AdventOfCode/RestroomRedoubt/src/: RestroomRedoubt.cpp
source/AdventOfCode/Utils/: CMakeLists.txt
source/AdventOfCode/Utils/inc/Utils/: Parsers.hpp
source/AdventOfCode/Utils/src/: Parsers.cpp
source/AdventOfCode/WarehouseWoes/inc/: WarehouseWoes.hpp
source/AdventOfCode/WarehouseWoes/src/: WarehouseWoes.cpp
source/tasks/: CMakeLists.txt
source/tasks/BracesValidator/: CMakeLists.txt
source/tasks/BracesValidator/inc/: BracesValidator.hpp
source/tasks/BracesValidator/src/: BracesValidator.cpp
source/tasks/LeetCodeDailyTasks/: CMakeLists.txt
source/tasks/LeetCodeDailyTasks/src/: DailyTask.hpp
tests/: CMakeLists.txt
tests/BracesValidator/: BracesValidatorTests.cpp  CMakeLists.txt
tests/DailyTask/: CMakeLists.txt  DailyTaskTests.cpp
