add_subdirectory(Utils)

add_library(AdventOfCode-lib
    HistorianHysteria/src/HistorianHysteria.cpp
    RedNosedReports/src/RedNosedReports.cpp
    MullItOver/src/MullItOver.cpp
    CeresSearch/src/CeresSearch.cpp
    PrintQueue/src/PrintQueue.cpp
    GuardGallivant/src/GuardGallivant.cpp
    BridgeRepair/src/BridgeRepair.cpp
    ResonantCollinearity/src/ResonantCollinearity.cpp
    DiskFragmenter/src/DiskFragmenter.cpp
    HoofIt/src/HoofIt.cpp
    PlutonianPebbles/src/PlutonianPebbles.cpp
    GardenGroups/src/GardenGroups.cpp
    ClawContraption/src/ClawContraption.cpp
    RestroomRedoubt/src/RestroomRedoubt.cpp
    WarehouseWoes/src/WarehouseWoes.cpp

    HistorianHysteria/inc/HistorianHysteria.hpp
    RedNosedReports/inc/RedNosedReports.hpp
    MullItOver/inc/MullItOver.hpp
    CeresSearch/inc/CeresSearch.hpp
    PrintQueue/inc/PrintQueue.hpp
    GuardGallivant/inc/GuardGallivant.hpp
    BridgeRepair/inc/BridgeRepair.hpp
    ResonantCollinearity/inc/ResonantCollinearity.hpp
    DiskFragmenter/inc/DiskFragmenter.hpp
    HoofIt/inc/HoofIt.hpp
    PlutonianPebbles/inc/PlutonianPebbles.hpp
    GardenGroups/inc/GardenGroups.hpp
    ClawContraption/inc/ClawContraption.hpp
    RestroomRedoubt/inc/RestroomRedoubt.hpp
    WarehouseWoes/inc/WarehouseWoes.hpp)

target_include_directories(AdventOfCode-lib
    PRIVATE
    HistorianHysteria/src
    RedNosedReports/src
    MullItOver/src
    CeresSearch/src
    PrintQueue/src
    GuardGallivant/src
    BridgeRepair/src
    ResonantCollinearity/src
    DiskFragmenter/src
    HoofIt/src
    PlutonianPebbles/src
    GardenGroups/src
    ClawContraption/src
    RestroomRedoubt/src
    WarehouseWoes/src

    PUBLIC
    HistorianHysteria/inc
    RedNosedReports/inc
    MullItOver/inc
    CeresSearch/inc
    PrintQueue/inc
    GuardGallivant/inc
    BridgeRepair/inc
    ResonantCollinearity/inc
    DiskFragmenter/inc
    HoofIt/inc
    PlutonianPebbles/inc
    GardenGroups/inc
    ClawContraption/inc
    RestroomRedoubt/inc
    WarehouseWoes/inc)

target_link_libraries(AdventOfCode-lib
    PUBLIC
    Utils-lib)